@@ -6,100 +6,106 @@ import com.espaciosdeportivos.repository.EquipamientoRepository;
 import com.espaciosdeportivos.service.IEquipamientoService;
 import com.espaciosdeportivos.validation.EquipamientoValidator;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class EquipamientoServiceImpl implements IEquipamientoService {
+@RequiredArgsConstructor
+@Transactional
+public class EquipamientoServiceimpl implements IEquipamientoService {
+
     private final EquipamientoRepository equipamientoRepository;
     private final EquipamientoValidator equipamientoValidator;
-
-    @Autowired
-    public EquipamientoServiceImpl(
-            EquipamientoRepository equipamientoRepository,
-            EquipamientoValidator equipamientoValidator
-    ) {
-        this.equipamientoRepository = equipamientoRepository;
-        this.equipamientoValidator = equipamientoValidator;
-    }
 
     @Override
     @Transactional(readOnly = true)
     public List<EquipamientoDTO> obtenerTodosLosEquipamientos() {
-        return equipamientoRepository.findAll()
+        return equipamientoRepository.findByEstadoboolTrue()
                 .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public EquipamientoDTO obtenerEquipamientoPorId(Long id) {
-        Equipamiento equipamiento = equipamientoRepository.findById(id)
+        Equipamiento eq = equipamientoRepository.findByIdequipamientoAndEstadoboolTrue(id)
                 .orElseThrow(() -> new RuntimeException("Equipamiento no encontrado con ID: " + id));
-        return convertToDTO(equipamiento);
+        return toDto(eq);
     }
 
     @Override
-    @Transactional
     public EquipamientoDTO crearEquipamiento(@Valid EquipamientoDTO dto) {
         equipamientoValidator.validarEquipamiento(dto);
-        Equipamiento equipamiento = convertToEntity(dto);
-        Equipamiento guardado = equipamientoRepository.save(equipamiento);
-        return convertToDTO(guardado);
+
+        // Unicidad por nombre (opcional, descomenta si quieres reforzar)
+        // if (equipamientoRepository.existsByNombreequipamientoIgnoreCase(dto.getNombre())) {
+        //     throw new EquipamientoValidator.BusinessException("Ya existe un equipamiento con ese nombre.");
+        // }
+
+        Equipamiento entidad = toEntity(dto);
+        entidad.setIdequipamiento(null);
+        entidad.setEstadobool(Boolean.TRUE);
+
+        return toDto(equipamientoRepository.save(entidad));
     }
 
     @Override
-    @Transactional
     public EquipamientoDTO actualizarEquipamiento(Long id, @Valid EquipamientoDTO dto) {
-        Equipamiento existente = equipamientoRepository.findById(id)
+        Equipamiento existente = equipamientoRepository.findByIdequipamientoAndEstadoboolTrue(id)
                 .orElseThrow(() -> new RuntimeException("Equipamiento no encontrado con ID: " + id));
+
         equipamientoValidator.validarEquipamiento(dto);
+
+        // Unicidad por nombre ignorando el mismo id (opcional)
+        // equipamientoRepository.findByNombreequipamientoIgnoreCase(dto.getNombre())
+        //     .filter(e -> !e.getIdequipamiento().equals(id))
+        //     .ifPresent(e -> { throw new EquipamientoValidator.BusinessException("Ya existe un equipamiento con ese nombre."); });
 
         existente.setNombreequipamiento(dto.getNombre());
         existente.setTipoequipamiento(dto.getTipo());
         existente.setDescripcion(dto.getDescripcion());
         existente.setEstado(dto.getEstado());
         existente.setUrlimagen(dto.getUrlImagen());
+        existente.setEstadobool(dto.getEstadobool());
 
-        Equipamiento actualizado = equipamientoRepository.save(existente);
-        return convertToDTO(actualizado);
+        return toDto(equipamientoRepository.save(existente));
     }
 
     @Override
-    @Transactional
     public EquipamientoDTO eliminarEquipamiento(Long id) {
-        Equipamiento existente = equipamientoRepository.findById(id)
+        Equipamiento existente = equipamientoRepository.findByIdequipamientoAndEstadoboolTrue(id)
                 .orElseThrow(() -> new RuntimeException("Equipamiento no encontrado con ID: " + id));
-        equipamientoRepository.delete(existente);
-        return convertToDTO(existente);
+        existente.setEstadobool(Boolean.FALSE); // baja lógica
+        return toDto(equipamientoRepository.save(existente));
     }
 
-    // Métodos privados de conversión
-    private EquipamientoDTO convertToDTO(Equipamiento equipamiento) {
+    // ---------- mapping ----------
+    private EquipamientoDTO toDto(Equipamiento e) {
         return EquipamientoDTO.builder()
-                .idEquipamiento(equipamiento.getIdequipamiento())
-                .nombre(equipamiento.getNombreequipamiento())
-                .tipo(equipamiento.getTipoequipamiento())
-                .descripcion(equipamiento.getDescripcion())
-                .estado(equipamiento.getEstado())
-                .urlImagen(equipamiento.getUrlimagen())
+                .idEquipamiento(e.getIdequipamiento())
+                .nombre(e.getNombreequipamiento())
+                .tipo(e.getTipoequipamiento())
+                .descripcion(e.getDescripcion())
+                .estado(e.getEstado())
+                .urlImagen(e.getUrlimagen())
+                .estadobool(e.getEstadobool())
                 .build();
     }
 
-    private Equipamiento convertToEntity(EquipamientoDTO dto) {
+    private Equipamiento toEntity(EquipamientoDTO d) {
         return Equipamiento.builder()
-                .idequipamiento(dto.getIdEquipamiento())
-                .nombreequipamiento(dto.getNombre())
-                .tipoequipamiento(dto.getTipo())
-                .descripcion(dto.getDescripcion())
-                .estado(dto.getEstado())
-                .urlimagen(dto.getUrlImagen())
+                .idequipamiento(d.getIdEquipamiento())
+                .nombreequipamiento(d.getNombre())
+                .tipoequipamiento(d.getTipo())
+                .descripcion(d.getDescripcion())
+                .estado(d.getEstado())
+                .urlimagen(d.getUrlImagen())
+                .estadobool(d.getEstadobool() != null ? d.getEstadobool() : Boolean.TRUE)
                 .build();
     }
 }
